create database properties

--- a/hospitals_Demo/src/main/resources/application.properties
+++ b/hospitals_Demo/src/main/resources/application.properties
@@ -4,7 +4,7 @@ spring.datasource.username=hospitals
 spring.datasource.password=hospitals123
 spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
 
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 spring.jpa.database-platform=org.hibernate.dialect.Oracle12cDialect
 mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 
